welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: not found: value compteur
      compteur=compteur+1
      ^noTriples:5: error: not found: value compteur
    }else{compteur=compteur+0}
          ^noTriples:7: error: not found: value compteur
  if (compteur==3){
      ^