welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  for (i<- 0 to nums.length-2){
    if (nums(i)==nums(i+1)){
      compteur=compteur+1
    }else{compteur=compteur+0}
  }
  if (compteur==3){
    return true
  }else{return false}
}
    
 